[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "llm-cli"
version = "0.0.1"
description = "Small cli for llms"
packages = [{include = "llm-cli"}]
license = "GNU GPLv3"
readme = "README.md"
authors = ["krenzaslv"]

[tool.poetry.dependencies]
python = ">3.9, < 3.12" #torch not available for 3.12 as of now
typer = "^0.9.0"
huggingface-hub = "^0.19.4"
llama-cpp-python = "^0.2.20"

[tool.poetry.group.develop]
optional = true
[tool.poetry.group.develop.dependencies]
ruff-lsp = "^0.0.45"
pyright = "^1.1.339"
ruff = "^0.1.7"

[tool.poetry.scripts]
llm-cli = "llm-cli.main:main"

[tool.ruff]
line-length=200

select = ["E4", "E7", "E9", "F", "B", "Q", "E", "W", "C90", "I", "N", "D", "UP", "YTT", "ANN", "S", "A", "C4", "T10", "G", "PIE", "Q", "RSE", "SLF", "SIM", "TID", "ARG", "ERA", "TRY", "FLY", "PERF", "FURB"]
exclude = ["D103"]

ignore = ["E501", "ANN101", "D100", "ANN201", "D103", "D104", "D202"]

unfixable = ["B"]

